--- a/Major_Project_Frontend/src/component/Contactus/style.css
+++ b/Major_Project_Frontend/src/component/Contactus/style.css
@@ -1,9 +1,5 @@
-.home{
+.Contactus{
     background-image: url(/src/component/images/l3.png);
     height:81vh;
 
-}
-.cardhead{
-    display: flex;
-    
 }
