--- a/Major_Project_Frontend/src/component/Doctor/style.css
+++ b/Major_Project_Frontend/src/component/Doctor/style.css
@@ -6,3 +6,111 @@
     background-image: url(/src/component/images/l3.png);
     height:81vh;
 }
+.Doctorpanel1 h2{
+     text-align: center;
+     padding-top: 20px;
+     font-weight:700;
+}
+.Doctorpanel2{
+    height:70vh;
+    width: 88vw;
+    background-color:white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+    opacity: 80%;
+}
+.Doctorpanel2 img{
+    width: 100px;
+    margin: 30px 80px;
+}
+.Doctorpanel3{
+    margin: -19px 70px;
+    font-size:15px;
+    font-weight:600;
+    color: black;
+    font-weight:700;
+}
+.d234{
+    display:flex;
+}
+.Doctorpanel4 h2{
+    margin: -160px 200px;
+    text-align: center;
+    font-weight:700; 
+    color: black;
+}
+.Doctorpanel5{
+    width: 50vw;
+    margin: -120px 200px;
+    margin-left: 350px;
+}
+.Doctorpanel5 p{
+    color: black;
+    font-weight: 500;
+
+}
+.doctorcard{
+    margin-left: -400px;
+    margin-top: 100px;
+    display: flex;
+    padding-left: 200px;
+}
+.dcard{
+    width:15vw;
+    margin-left: 60px;
+    border:3px solid black;
+ 
+}
+.card img{
+    width:10vw;
+    height:17vh;
+    margin: auto;
+}
+ .card p{
+    font-size: 20px;
+    text-align: center;
+    font-weight:700;
+    margin-bottom:10px;
+ }
+
+
+
+
+
+                           /* CSS for login page */
+ *{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+.login{
+    height:74vh;
+    margin-left: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.login-1{
+    border-radius:20px;
+    background-color: white;
+    padding: 20px;
+}
+.login form{
+ font-size: 21px;
+}
+.login-1 h1{
+    font-size: 36px;
+    margin-bottom: 22px;
+}
+.form-group{
+    margin-bottom:10px;
+}
+.forgotpassword{
+    font-size: 17px;
+    text-align: center;
+    color:green;
+}
+.nav-link{
+    text-align: center;
+}
