--- a/Major_Project_Frontend/src/component/Admin/style.css
+++ b/Major_Project_Frontend/src/component/Admin/style.css
@@ -122,3 +122,61 @@
    font-weight:700;
    margin-bottom:10px;
 }
+
+
+
+           /* css for new registration form */
+.Registration{
+   margin-left: 100px;
+}
+.col-md-6{
+    padding-left:20px;
+    padding-right:20px;
+    width: 25rem;
+}
+.col-12{
+    padding-left: 20px;
+    width: 80rem;;
+
+}
+.box{
+    border-radius: 23px;
+    border: 3px solid black;
+    width: 51%;
+    margin-left:200px;
+    padding-left: 0px;
+    margin-bottom: 60px;
+    padding-bottom: 10px;
+     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.col-md-5{
+    padding-left:20px;
+    padding-right:20px;
+
+}
+.col-md-5,select{
+    width:300px;
+    height: 35px;
+}
+.button{
+    padding: 10px 107px;
+    
+}
+[type=buttonk]:not(:disabled){
+width: 120px;
+margin-left:200px;
+}
+.text{
+    text-decoration-color: aliceblue;
+}
+.button2{
+    margin-left: 300px;
+    padding-top: 0px;
+    margin-bottom: 20px;
+}
+.heading{
+    margin-left:200px;
+    margin-top: 20px;
+    
+}
