--- a/Major_Project_Frontend/src/component/Navbar/style.css
+++ b/Major_Project_Frontend/src/component/Navbar/style.css
@@ -10,13 +10,17 @@
     margin: 25px ;
     list-style-type : none;  
 }
+/* .nav li{
+    background-color: white;
+    width:10px;
+} */
 .nav a{
     color:white;
     text-decoration: none;
     text-align: center;
-    margin:30px;
+    padding-left:50px;
     font-size:20px;
-    font-style:italic;
+    font-weight: 600;
 }
 .nav a:hover{
     color: aqua;
