--- a/Major_Project_Frontend/src/component/Card/style.css
+++ b/Major_Project_Frontend/src/component/Card/style.css
@@ -11,6 +11,7 @@
   padding-top: 12px;
   padding-left:15px;
   width:21vw;
+  height:44vh;
 }
 .card3 {
     padding-top:20px;
@@ -26,7 +27,7 @@
 }
 .card1:hover{
   /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-  transform: scale(1.01);
+  transform: scale(1.001);
   box-shadow: 5px 10px 8px 10px #888888;
 }
 .btn-dark{
