--- a/Major_Project_Frontend/src/component/Admin/style.css
+++ b/Major_Project_Frontend/src/component/Admin/style.css
@@ -38,12 +38,16 @@
    margin: -160px 200px;
    text-align: center;
    font-weight:700; 
-   color: black;
+   color:#1ca6f3;
 }
 .Adminpanel5{
    width: 50vw;
    margin: -120px 200px;
    margin-left: 350px;
+}
+.aimg img{
+   border: 2px solid black;
+   border-radius: 10px;
 }
 .Adminpanel5 p{
    color: black;
@@ -56,15 +60,17 @@
    display: flex;
    padding-left: 200px;
 }
-.dcard{
-   width:15vw;
-   margin-left: 60px;
-   border:3px solid black;
-
+.doctorcard a{
+   text-decoration: none;
 }
-.card img{
-   width:10vw;
-   height:17vh;
+.dcard{
+   width:18vw;
+   margin-left: 60px;
+}
+
+.dcard img{
+   width: 13vw;
+   height:23vh;
    margin: auto;
 }
 .card p{
@@ -73,6 +79,7 @@
    font-weight:700;
    margin-bottom:10px;
 }
+
 
 
 
@@ -131,3 +138,167 @@ margin-left:200px;
     margin-top: 20px;
     
 }
+
+ /* css for add doctor */
+
+ .Adddoctor{
+   background-image: url(/src/component/images/l3.png);
+    height:81vh;
+}
+.Adddoctor1{
+   width: 88vw;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 30px;
+   padding-top:5vh;
+}
+
+  .form-container {
+   display: flex;
+   height:70vh;
+   flex-direction: column;
+   align-items: center;
+   padding: 20px;
+   background-color: black;
+   color: white;
+   opacity:80%;
+   /* background-color: #f0f0f0; */
+   border-radius: 20px;
+   border: 2px solid yellow;
+ }
+ 
+ .form-label {
+   font-size: 16px;
+   font-weight: 600;
+ }
+ 
+ .form-input {
+   padding:10px;
+   border: none;
+   border-radius: 5px;
+   margin-bottom:10px;
+   width: 100%;
+   max-width: 400px;
+ }
+ 
+ .form-button {
+   background-color: #007bff;
+   color: #fff;
+   border: none;
+   border-radius: 5px;
+   padding: 10px 20px;
+   cursor: pointer;
+ }
+ select{
+   padding:10px;
+   border: none;
+   border-radius: 5px;
+   margin-bottom:10px;
+   width: 100%;
+   max-width: 400px;
+   height: 100px;
+   margin-bottom:25px;
+ }
+
+  /* css for search doctor */
+ 
+  .Searchdoctor{
+   background-image: url(/src/component/images/l3.png);
+   height:81vh;
+  }
+  .Searchdoctor1{
+   height:70vh;
+   width: 88vw;
+   background-color:white;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 30px;
+   opacity: 94%;
+  }
+  .Searchdoctor1 h4{
+   padding:20px;
+   font-weight: 700;
+   text-align: center;
+
+  }
+  .Searchdoctor2{
+   width: 22vw;
+   border-right:3px solid black;
+  }
+  .Searchdoctor2 img{
+   width:130px;
+   margin: 20px 100px;
+   border: 2px solid black;
+   border-radius: 8px;
+  }
+  .Searchdoctor2 p{
+  margin-bottom:10px;
+  font-size:18px;
+  font-weight: 600;
+  margin-left: 100px;
+  }
+  .Searchdoctor234{
+   display: flex;
+  }
+  .Searchdoctor4 {
+   width: 22vw;
+  }
+  .Searchdoctor4 img{
+   width:130px;
+   margin: 20px 100px;
+   border: 2px solid black;
+   border-radius: 8px;
+  }
+  .Searchdoctor4 p{
+   margin-bottom:10px;
+   font-size:18px;
+   font-weight: 600;
+   margin-left: 100px;
+   }
+   .otherdoctors{
+      display: flex;
+   }
+  .otherdoctors p{
+   padding-left:400px;
+   padding-top: 44px;
+  }
+ 
+    /* css for scan card */
+  .Scancard{
+   background-image: url(/src/component/images/bg.jpg);
+   background-size: cover;
+   height:81vh;
+  }
+  .Scancard1{
+   background-color:white;
+   opacity: 80%;
+   height:65vh;
+   border-radius: 30px;
+   width: 80vw;
+   margin-left: auto;
+   margin-right: auto;
+  }
+  .Scancard1 h3{
+   color: #360F88;
+   font-weight: 700;
+   text-align: center;
+   padding-top: 30px;
+   letter-spacing: 1px;
+  }
+  .Scancard1 img{
+   height: 28vh;
+   padding-left:32.5vw;
+   margin-top: 10px;
+  }
+  .Scancard1 p{
+   text-align: center;
+   letter-spacing: 1px;
+   width: 70vw;
+   padding-left:300px;
+   padding-top:30px;
+   /* margin-top: 40px; */
+   margin-bottom:-20px;
+   font-size: 17px;
+   font-weight: 600;
+   color: #360F88;
+  }
