--- a/Major_Project_Frontend/src/component/Doctor/style.css
+++ b/Major_Project_Frontend/src/component/Doctor/style.css
@@ -1,9 +1,10 @@
 .Doctorlogin{
-    background-image: url(/src/component/images/l3.png);
+    background-image: url(/src/component/images/bg.jpg);
     height:81vh;
+    background-size: cover;
 }
 .Doctorpanel{
-    background-image: url(/src/component/images/l3.png);
+    background-image: url(/src/component/images/bg.jpg);
     height:81vh;
 }
 .Doctorpanel1 h2{
@@ -19,10 +20,15 @@
     margin-right: auto;
     border-radius: 30px;
     opacity: 94%;
+
 }
 .Doctorpanel2 img{
     width: 100px;
     margin: 30px 80px;
+}
+.himg img{
+    border: 2px solid black;
+    border-radius: 10px;
 }
 .Doctorpanel3{
     margin: -19px 70px;
@@ -38,7 +44,7 @@
     margin: -160px 200px;
     text-align: center;
     font-weight:700; 
-    color: black;
+    color:#1ca6f3;
 }
 .Doctorpanel5{
     width: 50vw;
@@ -46,25 +52,27 @@
     margin-left: 350px;
 }
 .Doctorpanel5 p{
-    color: black;
+    color:black;
     font-weight: 500;
 
 }
-.doctorcard{
+/* .doctorcard{
     margin-left: -400px;
     margin-top: 100px;
     display: flex;
     padding-left: 200px;
 }
-.dcard{
-    width:15vw;
-    margin-left: 60px;
-    border:3px solid black;
- 
+.doctorcard a{
+    text-decoration: none;
 }
-.card img{
-    width:10vw;
-    height:17vh;
+.dcard{
+    width: 16vw;
+    margin-left: 60px;
+}
+
+.dcard img{
+    width: 13vw;
+    height:23vh;
     margin: auto;
 }
  .card p{
@@ -72,7 +80,7 @@
     text-align: center;
     font-weight:700;
     margin-bottom:10px;
- }
+ } */
 
 
 
