--- a/Major_Project_Frontend/src/component/Patient/style.css
+++ b/Major_Project_Frontend/src/component/Patient/style.css
@@ -38,7 +38,7 @@
    margin: -160px 200px;
    text-align: center;
    font-weight:700; 
-   color: black;
+   color:#1ca6f3;
 }
 .Patientpanel5{
    width: 50vw;
@@ -50,28 +50,9 @@
    font-weight: 500;
 
 }
-.doctorcard{
-   margin-left: -400px;
-   margin-top: 100px;
-   display: flex;
-   padding-left: 200px;
-}
-.dcard{
-   width:15vw;
-   margin-left: 60px;
-   border:3px solid black;
-
-}
-.card img{
-   width:10vw;
-   height:17vh;
-   margin: auto;
-}
-.card p{
-   font-size: 20px;
-   text-align: center;
-   font-weight:700;
-   margin-bottom:10px;
+.pimg img{
+   border: 2px solid black;
+   border-radius: 10px;
 }
 
   /* CSS for Aboutpatient */
@@ -109,3 +90,24 @@
     margin: 10px 230px;
     width: 30vw;
   }
+
+    /* CSS for Previousreport */
+
+    .Previousreport{
+         height:81vh;
+    }
+    .Previousreport1{
+      width: 90vw;
+      margin-top: 40px;
+      height: 7vh;
+      background-color: green;
+      margin-left: auto;
+      margin-right: auto;
+  }
+  .Previousreport h3{
+      text-align: center;
+      color:white;
+      font-weight: 640;
+      padding-top: 7px;
+  }
+  
