--- a/Major_Project_Frontend/src/component/Patient/style.css
+++ b/Major_Project_Frontend/src/component/Patient/style.css
@@ -2,18 +2,35 @@
     background-image: url(/src/component/images/l3.png);
     height:81vh;
 }
+.Patientlogin1{
+   height: 62vh;
+    width: 30vw;
+    background-color:white;
+    padding-top: 15px;
+    border-radius: 20px;
+    margin: auto;
+    border: 2px solid black;
+}
+.Patientlogin1 p{
+   font-size: 16px;
+   font-weight:500;
+   padding-top: 12px;
+   padding-bottom: 8px;
+}
 .Patientpanel{
     background-image: url(/src/component/images/l3.png);
     height:81vh;
 }
-.Patientpanel1 h2{
-    text-align: center;
-    padding-top: 20px;
-    font-weight:700;
+.Patientpanel1 p{
+   font-size: 30px;
+   text-align: center;
+   padding-top:15px;
+   font-weight:700;
 }
 .Patientpanel2{
    height:70vh;
    width: 88vw;
+   margin-top:0px;
    background-color:white;
    margin-left: auto;
    margin-right: auto;
@@ -34,20 +51,24 @@
 .p234{
    display:flex;
 }
-.Patientpanel4 h2{
-   margin: -160px 200px;
+.Patientpanel4 p{
+   margin: -170px 200px;
    text-align: center;
+   font-size:30px;
    font-weight:700; 
+   letter-spacing: 1px;
    color:#1ca6f3;
 }
 .Patientpanel5{
    width: 50vw;
-   margin: -120px 200px;
+   margin: -150px 200px;
    margin-left: 350px;
 }
 .Patientpanel5 p{
-   color: black;
+   color:black;
+   font-size: 20px;
    font-weight: 500;
+   letter-spacing: 1px;
 
 }
 .pimg img{
@@ -104,8 +125,9 @@
       margin-left: auto;
       margin-right: auto;
   }
-  .Previousreport h3{
+  .Previousreport p{
       text-align: center;
+      font-size: 25px;
       color:white;
       font-weight: 640;
       padding-top: 7px;
